Fix the generation dropdown update.

The bug happened because we didn't call Layout().

Bug: 884648
Change-Id: Iadd1d5b66de2b60103470eccff8862ad14d185a2
Reviewed-on: https://chromium-review.googlesource.com/1228195
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Dominic Battré <battre@chromium.org>
Reviewed-by: Dominic Battré <battre@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591695}