chrome/browser/ui/views/autofill/autofill_popup_base_view.cc
@@ -204,6 +204,7 @@ void AutofillPopupBaseView::DoUpdateBoundsAndRedrawPopup() {
   popup_bounds.Inset(-GetWidget()->GetRootView()->border()->GetInsets());
   GetWidget()->SetBounds(popup_bounds);
 
+  Layout();
   SetClipPath();
   SchedulePaint();
 }
